post: rework score icon meanings

--- a/src/ui/listing/Listing.pug
+++ b/src/ui/listing/Listing.pug
@@ -190,6 +190,8 @@ style.
 		background none
 		box-shadow none
 		color rgba(0,0,0,0.5)
+		font-size 12px
+		padding 1em 0
 	.subreddit-description
 		padding 10px
 	.subreddit-rules
