--- a/src/ui/post/Headline.pug
+++ b/src/ui/post/Headline.pug
@@ -13,7 +13,6 @@ script.
 
 button.post-card(class:selected={selected} on:mousedown={() => select(post_short_id)})
 	div
-	div
 	.post-tags
 		{#if post.archived}
 			Tag(name='archived')
@@ -29,17 +28,18 @@ button.post-card(class:selected={selected} on:mousedown={() => select(post_short
 			Tag(name='sticky')
 		{#if post.is_original_content}
 			Tag(name='oc')
-	time.post-age(datetime={post.created_utc} title={post.edited ? Format.time.sAbsolute(post.created_utc) + ' (edited ' + Format.time.sAbsolute(post.edited) + ')': Format.time.sAbsolute(post.created_utc)}) {Format.time.sRelative(post.created_utc)}
-	.post-score
-		Score(awards={post.all_awardings} upload_vote={(vote) => api.send(api.ID.action('vote_post', post_short_id, vote))} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
-	h1.post-title {post.title}
 	div
+	.post-score
+		Score(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.send(api.ID.action('vote_post', post_short_id, vote))} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
+	h1.post-title {post.title}
+	time.post-age(datetime={post.created_utc} title={post.edited ? Format.time.sAbsolute(post.created_utc) + ' (edited ' + Format.time.sAbsolute(post.edited) + ')': Format.time.sAbsolute(post.created_utc)}) {Format.time.sRelative(post.created_utc)}
 	div
 	.post-context
 		{#if show_subreddit}
 			a(href='/r/{post.subreddit}') r/{post.subreddit.toLowerCase()}
 		{#if post.link_flair_text}
 			Flair(color={post.link_flair_background_color} rich_text={post.link_flair_richtext} text={post.link_flair_text})
+	div
 	.post-info(style='display: none')
 		data.post-comment-count {post.num_comments} 💬
 
@@ -55,7 +55,7 @@ style.
 		display grid
 		font-size 14px
 		gap 0 6px
-		grid-template-columns 24px 24px 1fr
+		grid-template-columns 24px 1fr 24px
 		line-height 1.5
 		max-width 480px
 		padding 10px
