--- a/src/ui/post/Headline.pug
+++ b/src/ui/post/Headline.pug
@@ -9,39 +9,42 @@ script.
 	export selected = false
 	export show_subreddit = false
 	post = null
-	api.watch(api.ID.dataset('post', post_short_id), (x) -> { data: post } = x)
+	api.loadWatch(api.ID('post', post_short_id),
+		(x) -> { data: post } = x
+	)
 
-button.post-card(class:selected={selected} on:mousedown={() => select(post_short_id)})
-	div
-	.post-tags
-		{#if post.archived}
-			Tag(name='archived')
-		{#if post.spoiler}
-			Tag(name='spoiler')
-		{#if post.locked}
-			Tag(name='locked')
-		{#if post.quarantine}
-			Tag(name='quarantined')
-		{#if post.over_18}
-			Tag(name='nsfw')
-		{#if post.stickied}
-			Tag(name='sticky')
-		{#if post.is_original_content}
-			Tag(name='oc')
-	div
-	.post-score
-		Score(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.send(api.ID.action('vote_post', post_short_id, vote))} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
-	h1.post-title {post.title}
-	time.post-age(datetime={post.created_utc} title={post.edited ? Format.time.sAbsolute(post.created_utc) + ' (edited ' + Format.time.sAbsolute(post.edited) + ')': Format.time.sAbsolute(post.created_utc)}) {Format.time.sRelative(post.created_utc)}
-	div
-	.post-context
-		{#if show_subreddit}
-			a(href='/r/{post.subreddit}') r/{post.subreddit.toLowerCase()}
-		{#if post.link_flair_text}
-			Flair(color={post.link_flair_background_color} rich_text={post.link_flair_richtext} text={post.link_flair_text})
-	div
-	.post-info(style='display: none')
-		data.post-comment-count {post.num_comments} 💬
+{#if post}
+	button.post-card(class:selected={selected} on:mousedown={() => select(post_short_id)})
+		div
+		.post-tags
+			{#if post.archived}
+				Tag(name='archived')
+			{#if post.spoiler}
+				Tag(name='spoiler')
+			{#if post.locked}
+				Tag(name='locked')
+			{#if post.quarantine}
+				Tag(name='quarantined')
+			{#if post.over_18}
+				Tag(name='nsfw')
+			{#if post.stickied}
+				Tag(name='sticky')
+			{#if post.is_original_content}
+				Tag(name='oc')
+		div
+		.post-score
+			Score(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.submit(api.ID('post_vote', post_short_id), { numerical_vote: vote })} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
+		h1.post-title {post.title}
+		time.post-age(datetime={post.created_utc} title={post.edited ? Format.time.sAbsolute(post.created_utc) + ' (edited ' + Format.time.sAbsolute(post.edited) + ')': Format.time.sAbsolute(post.created_utc)}) {Format.time.sRelative(post.created_utc)}
+		div
+		.post-context
+			{#if show_subreddit}
+				a(href='/r/{post.subreddit}') r/{post.subreddit.toLowerCase()}
+			{#if post.link_flair_text}
+				Flair(color={post.link_flair_background_color} rich_text={post.link_flair_richtext} text={post.link_flair_text})
+		div
+		.post-info(style='display: none')
+			data.post-comment-count {post.num_comments} 💬
 
 style.
 	.post-age
