--- a/src/ui/wiki/WikiPage.pug
+++ b/src/ui/wiki/WikiPage.pug
@@ -8,7 +8,9 @@ script.
 	export subreddit_name = null
 	error = null
 	page = null
-	api.watch(api.ID.dataset('wiki', subreddit_name, page_name, revision_id), (x) -> { data: page, error: error } = x)
+	api.loadWatch(api.ID('wiki', subreddit_name, page_name, revision_id),
+		(x) -> { data: page, error: error } = x
+	)
 
 svelte:head
 	title wiki: {subreddit_name}: {page_name.split('/').join(': ')}
